--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
 <style>
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap'); 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
 
 :root {
     --green: #16a085;
@@ -42,7 +42,7 @@
     --text-shadow: .4rem .4rem 0 rgba(0, 0, 0, .2);
     --border: .2rem solid var(--green);
     --color: #9176FF;
-    --bg-color: #f4f4f4;
+    --bg-color: #DCDCDC;
 }
 
 
@@ -74,7 +74,7 @@
 
 }
 .loginform {
-    padding-left: 300px;
+    padding-left: 360px;
     height: 30vh;
 }
 
@@ -141,20 +141,20 @@ section:nth-child(even) {
     transition: .5s;
     letter-spacing: 4px
 }
-  
+
 .btn-upload:hover {
     background: #03e9f4;
     /* color: #fff;*/
     border-radius: 5px;
     box-shadow: 0 0 5px #03e9f4,
-        
+
 }
-  
+
 .btn-upload span {
     position: absolute;
     display: block;
 }
-  
+
 .btn-upload span:nth-child(1) {
     top: 0;
     left: -100%;
@@ -163,7 +163,7 @@ section:nth-child(even) {
     background: linear-gradient(90deg, transparent, #03e9f4);
     animation: btn-anim1 1s linear infinite;
   }
-  
+
 @keyframes btn-anim1 {
     0% {
       left: -100%;
@@ -172,7 +172,7 @@ section:nth-child(even) {
       left: 100%;
     }
   }
-  
+
 .btn-upload span:nth-child(2) {
     top: -100%;
     right: 0;
@@ -182,7 +182,7 @@ section:nth-child(even) {
     animation: btn-anim2 1s linear infinite;
     animation-delay: .25s
 }
-  
+
 @keyframes btn-anim2 {
     0% {
       top: -100%;
@@ -191,7 +191,7 @@ section:nth-child(even) {
       top: 100%;
     }
 }
-  
+
 .btn-upload span:nth-child(3) {
     bottom: 0;
     right: -100%;
@@ -201,7 +201,7 @@ section:nth-child(even) {
     animation: btn-anim3 1s linear infinite;
     animation-delay: .5s
 }
-  
+
 @keyframes btn-anim3 {
     0% {
       right: -100%;
@@ -210,7 +210,7 @@ section:nth-child(even) {
       right: 100%;
     }
 }
-  
+
 .btn-upload span:nth-child(4) {
     bottom: -100%;
     left: 0;
@@ -220,7 +220,7 @@ section:nth-child(even) {
     animation: btn-anim4 1s linear infinite;
     animation-delay: .75s
 }
-  
+
 @keyframes btn-anim4 {
     0% {
       bottom: -100%;
@@ -278,6 +278,7 @@ section:nth-child(even) {
     flex-wrap: wrap;
     gap: 2rem;
     padding-top: 10rem;
+
 }
 .home .content {
     flex: 1 1 45rem;
@@ -292,17 +293,18 @@ section:nth-child(even) {
 
 .home .content p {
     font-size: 2.5rem;
-    color:var(--light-color); 
+    color:var(--light-color);
     line-height: 1.8;
     padding: 1rem 0;
 }
 
 .enroll-form {
+
     display: flex;
     flex-direction: column;
-    padding-left: 300px;
+    padding-left: 380px;
 
-   
+
 }
 .content p{
     color: black;
@@ -322,13 +324,14 @@ section:nth-child(even) {
     text-align: center;
     text-transform: uppercase;
     text-shadow: .4rem .4rem 0 rgba(0, 0, 0, .2);
-    color: #16a085; 
+    color: #16a085;
     letter-spacing: .3rem;
-    
-} 
+
+}
 
 
 .para{
+    text-align: center;
     font-size: 20px;
     margin-top: 30px;
     line-height: 1.3;
@@ -338,7 +341,7 @@ section:nth-child(even) {
 }
 #check{
     display: none;
-} 
+}
 
 #check:checked ~.hide{
     display: block;
@@ -361,12 +364,10 @@ section:nth-child(even) {
 
 .about-us img{
     height: 50vh;
-    float:left;
-    margin-top: 30px;
-    margin-right: 30px;
-    margin-left: 20px;
-    
-    
+    display:block;
+    margin-right: auto;
+    margin-left: auto;
+
 }
 
 
@@ -395,7 +396,7 @@ section:nth-child(even) {
     flex-direction: column;
     margin: 0 2em;
   }
-  
+
 
 
 .card__image{
@@ -406,7 +407,7 @@ section:nth-child(even) {
     padding: 3px;
     margin-bottom: 2em;
 }
-  
+
 .card__image img{
     width: 100%;
     height: 100%;
@@ -438,8 +439,8 @@ section:nth-child(even) {
   font-size: 30px;
   padding: 10px;
   border-radius: 30%;
- 
-  
+
+
 }
 .card__name{
   color: black;
@@ -451,12 +452,16 @@ section:nth-child(even) {
     font-size: 20px;
     color: black;
     font-weight: bold;
-} 
+}
 
 
 /* footer */
 
-
+.footer {
+    background: var(--secondary-color);
+    padding: 1rem 9%;
+    text-align: center;
+}
 
 .footer .box-container {
     display: grid;
@@ -484,6 +489,7 @@ section:nth-child(even) {
 
 .footer .box-container .box a:hover i {
     padding-right: 2rem;
+
 }
 
 .footer .credit {
@@ -494,6 +500,7 @@ section:nth-child(even) {
     font-size: 2rem;
     color: var(--light-color);
     border-top: .1rem solid rgba(0, 0, 0, .1);
+
 }
 
 .footer .credit span {
@@ -586,13 +593,13 @@ section:nth-child(even) {
 
   <section class="home" id="home">
 
-    <div class="content">
+    <div class="content" style="text-align: center;">
       <h3>
-        <center><b>"New Way To Detect Health Condition </b><br> <b> from Blood Reports"</b></center>
+        <b>"New Way To Detect Health Condition </b><br> <b> from Blood Reports"</b>
       </h3>
-      <center>
+
         <p>Using <span>Machine Learning (LR) </span> </p>
-      </center>
+
     </div>
     <div class="enroll-form">
       <h1 class="heading"> <span> Upload File</span> now </h1>
@@ -633,21 +640,20 @@ section:nth-child(even) {
       </div>
       <div class="para">
         <input id="check" type="checkbox">
-        <p><i>Vishal Handoo</i></p>
+        <p><i><b>Vishal Handoo</b></i></p>
         <p>Made the front End of the Project along with the Report and PPT</p>
         <br>
-        <p><i>Mopuri Ayyappa Reddy</i>, <i>Abhinav Kumar Yadav</i></p>
+        <p><i><b>Mopuri Ayyappa Reddy</b></i></p>
         <p>Made the  Research paper and some part of the report</p>
         <br>
-        <p><i>Abhinav Kumar Yadav</i></p>
+        <p><i><b>Abhinav Kumar Yadav</b></i></p>
         <p>Collaborated with Nachiketa Bharti to develop the ML part of the project</p>
         <br>
-        <p><i>Nachiketa Bharti</i></p>
+        <p><i><b>Nachiketa Bharti</b></i></p>
         <p>Made the ML part and the main Logic behind the project</p>
         <br>
         </div>
       </div>
-    </div>
 
   </section>
 
@@ -665,7 +671,7 @@ section:nth-child(even) {
 
       <div class="card swiper-slide">
         <div class="card__image">
-          <img src="https://res.cloudinary.com/dp7tfd3nt/image/upload/v1677666809/img1_ce9lh4.jpg" alt="card image">
+          <img src="https://png.pngtree.com/png-vector/20191110/ourmid/pngtree-avatar-icon-profile-icon-member-login-vector-isolated-png-image_1978396.jpg" alt="card image">
         </div>
 
         <div class="card__content">
@@ -687,7 +693,7 @@ section:nth-child(even) {
 
       <div class="card swiper-slide">
         <div class="card__image">
-          <img src="https://res.cloudinary.com/dp7tfd3nt/image/upload/v1677666809/img1_ce9lh4.jpg" alt="card image">
+          <img src="https://png.pngtree.com/png-vector/20191110/ourmid/pngtree-avatar-icon-profile-icon-member-login-vector-isolated-png-image_1978396.jpg" alt="card image">
         </div>
 
         <div class="card__content">
@@ -711,7 +717,7 @@ section:nth-child(even) {
 
       <div class="card swiper-slide">
         <div class="card__image">
-          <img src="https://res.cloudinary.com/dp7tfd3nt/image/upload/v1677666809/img1_ce9lh4.jpg" alt="card image">
+          <img src="https://png.pngtree.com/png-vector/20191110/ourmid/pngtree-avatar-icon-profile-icon-member-login-vector-isolated-png-image_1978396.jpg" alt="card image">
         </div>
 
         <div class="card__content">
@@ -725,7 +731,7 @@ section:nth-child(even) {
               <a href="#"><i class="fa fa-twitter"></i></a>
             </div>
             <div class="icon1">
-              <a href="https://www.linkedin.com/in/kommari-surendra-b8abb924a"><i class="fa fa-linkedin"></i></a>
+              <a href=""><i class="fa fa-linkedin"></i></a>
             </div>
           </div>
         </div>
@@ -733,7 +739,7 @@ section:nth-child(even) {
 
       <div class="card swiper-slide">
         <div class="card__image">
-          <img src="https://res.cloudinary.com/dp7tfd3nt/image/upload/v1677666809/img1_ce9lh4.jpg" alt="card image">
+          <img src="https://png.pngtree.com/png-vector/20191110/ourmid/pngtree-avatar-icon-profile-icon-member-login-vector-isolated-png-image_1978396.jpg" alt="card image">
         </div>
 
         <div class="card__content">
@@ -747,7 +753,7 @@ section:nth-child(even) {
               <a href="#"><i class="fa fa-twitter"></i></a>
             </div>
             <div class="icon1">
-              <a href="https://www.linkedin.com/in/sudha-batna-5154a4244/3"><i class="fa fa-linkedin"></i></a>
+              <a href=""><i class="fa fa-linkedin"></i></a>
             </div>
           </div>
         </div>
@@ -758,7 +764,7 @@ section:nth-child(even) {
     
       <div class="card swiper-slide">
         <div class="card__image">
-          <img src="https://res.cloudinary.com/dp7tfd3nt/image/upload/v1677666809/img1_ce9lh4.jpg" alt="card image">
+          <img src="https://png.pngtree.com/png-vector/20191110/ourmid/pngtree-avatar-icon-profile-icon-member-login-vector-isolated-png-image_1978396.jpg" alt="card image">
         </div>
 
         <div class="card__content">
@@ -823,12 +829,12 @@ section:nth-child(even) {
 
             <div class="box">
                 <h3>contact info</h3>
-                <a href="Put your mail id"> <i class="fas fa-envelope"></i>vishalhandoo067@gmail.com</a>
-                <a href="Put your mail id"> <i class="fas fa-envelope"></i>ayyappareddymopuri@gmail.com
+                <a href="www.gmail.com"> <i class="fas fa-envelope"></i>vishalhandoo067@gmail.com</a>
+                <a href="www.gmail.com"> <i class="fas fa-envelope"></i>ayyappareddymopuri@gmail.com
                 </a>
-                <a href="Put your mail id"> <i class="fas fa-envelope"></i> abhinav.12013975@lpu.in
+                <a href="www.gmail.com"> <i class="fas fa-envelope"></i> abhinav.12013975@lpu.in
                 </a>
-              <a href="Put your mail id"> <i class="fas fa-envelope"></i> nachiketa.12011895@lpu.in
+              <a href="www.gmail.com"> <i class="fas fa-envelope"></i> nachiketa.12011895@lpu.in
                 </a>
                 <a href="#"> <i class="fas fa-map-marker-alt"></i> Andhra Pradesh, india - 521202 </a>
             </div> 
