Updating the details on the About Us section

--- a/templates/index.html
+++ b/templates/index.html
@@ -652,6 +652,8 @@ section:nth-child(even) {
         <p><i><b>Nachiketa Bharti</b></i></p>
         <p>Made the ML part and the main Logic behind the project</p>
         <br>
+        <p><i><b>Devi Priyanka Jinka</b></i></p>
+        <br>
         </div>
       </div>
 
@@ -768,9 +770,8 @@ section:nth-child(even) {
         </div>
 
         <div class="card__content">
-          <span class="card__title">Member Name</span>
-          <span class="card__name1">Put your Registrationn Number</span>
-          <span class="card__name">Put your Roll number</span>
+          <span class="card__title">Devi Priyanka Jinka</span>
+          <span class="card__name1">12003927</span>
           <div class="social">
             <div class="icon1">
               <a href="#"><i class="fa fa-facebook"></i></a>
@@ -836,7 +837,9 @@ section:nth-child(even) {
                 </a>
               <a href="www.gmail.com"> <i class="fas fa-envelope"></i> nachiketa.12011895@lpu.in
                 </a>
-                <a href="#"> <i class="fas fa-map-marker-alt"></i> Andhra Pradesh, india - 521202 </a>
+              <a href="www.gmail.com"> <i class="fas fa-envelope"></i> devi.12003927@lpu.in
+                </a>
+                <a href="#"> <i class="fas fa-map-marker-alt"></i> Punjab, India </a>
             </div> 
 
             <div class="box">
